画面遷移の実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,7 +3,7 @@
      <%= link_to current_user.name , edit_user_path(current_user) %>
   </div>
   <div class="create-room">
-      <%= link_to "チケットを作成する", new_room_path %>
+    <%= link_to "チャットを作成する", new_room_path %>
   </div>
 </div>
 
@@ -13,11 +13,7 @@
       <div class="room-name">
         <a href="#"><%= room.name%></a>
       </div>
-    </div> 
-  <% end %> 
-  <div class="room">
-    <div class="room-name">
-      <a heref="#">techroom2</a>
     </div>
-  </div>
+  <% end %>
 </div>
+  
